# LearnOpenGL

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/include/app/: Camera.h  CameraController.h  CameraSystem.h  FirstPersonController.h  Image.h  InputManager.h  Mesh.h  Model.h  PerspectiveCamera.h  Shader.h  ShaderProgram.h  Spatial.h  TimeManager.h  Transform.h  WindowManager.h  constants.h  utilities.h
app/shaders/: backpack.frag  backpack.vert  fragment.glsl  fragment1.glsl  illuminated_object.frag  illuminated_object.vert  vertex.glsl
app/src/: Camera.cpp  CameraController.cpp  CameraSystem.cpp  FirstPersonController.cpp  Image.cpp  InputManager.cpp  Mesh.cpp  Model.cpp  PerspectiveCamera.cpp  Shader.cpp  ShaderProgram.cpp  Spatial.cpp  TimeManager.cpp  Transform.cpp  WindowManager.cpp  main.cpp  utilities.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
